Fixing HN dark mode

--- a/css/news.ycombinator.com.scss
+++ b/css/news.ycombinator.com.scss
@@ -264,6 +264,10 @@ body {
 		color: $dark-text-primary !important;
 	}
 
+	.titleline a {
+		color: $dark-text-primary !important;
+	}
+
 	input[type=text], textarea {
 		color: $dark-text-primary !important;
 		background: $dark-bg-tertiary !important;
